--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,18 @@
-body {
+*{
   margin: 0;
+  padding: 0;
+}
+
+a{
+  color: gray;
+}
+
+a:hover{
+  color: purple;
+  border-bottom: rgb(200, 63, 200) 3px solid;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
